@@ -5,6 +5,8 @@ Changelog for pdoTools.
 - [#112] Parameter &scheme was set to system default in all snippets.
 - [#111] [pdoPage] Added ability to set "prev" & "next" meta tags.
 - [#107] [pdoNeighbors] Added ability to specify &parents for work.
+- [#106] [pdoMenu] Fixed "hereClass" and "selfClass" enabled &useWeblinkUrl parameter.
+- [#104] [pdoMenu] Snippet now using "pagetitle" for link titles if "titleOfLinks" is empty.
 
 1.10.1 pl
 ==============
